README update (init run cytomine core)